Refatorar e corrigir comentários e strings em arquivos JavaScript para consistência e clareza, com foco em capitalização e acentuação em português. Atualizar arquivos HTML para garantir a estrutura adequada e corrigir problemas de codificação.

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
                     <h5 class="text-primary fw-bold mb-0">xcafe</h5>
                 </div>
                 <p class="text-secondary mb-3">
-                    A plataforma mais personalizável para criação de tokens blockchain. 
+                    A plataforma mais personalizável para CriAção de tokens blockchain. 
                     Crie tokens ERC-20 seguros sem conhecimento técnico.
                 </p>
                 <div class="d-flex gap-2">
@@ -61,7 +61,7 @@
                 <ul class="list-unstyled">
                     <li class="mb-2">
                         <a href="#" class="text-secondary text-decoration-none">
-                            <i class="bi bi-book me-1"></i>Documentação
+                            <i class="bi bi-book me-1"></i>DocumentAção
                         </a>
                     </li>
                     <li class="mb-2">
@@ -131,7 +131,7 @@
             <div class="col-lg-6">
                 <p class="text-secondary small mb-0">
                     &copy; 2025 xcafe. Todos os direitos reservados. 
-                    Plataforma auditada e segura para criação de tokens.
+                    Plataforma auditada e segura para CriAção de tokens.
                 </p>
             </div>
             <div class="col-lg-6 text-lg-end">
@@ -154,6 +154,8 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
+
 
 
 
