--- a/header.html
+++ b/header.html
@@ -34,7 +34,7 @@
                         <li><a class="dropdown-item" href="#"><i class="bi bi-shield-check me-2"></i>Verificar Token</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-search me-2"></i>Explorar Tokens</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-book me-2"></i>Documentação</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-book me-2"></i>DocumentAção</a></li>
                     </ul>
                 </li>
             </ul>
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     console.error('Erro ao conectar wallet:', error);
                 }
             } else {
-                alert('MetaMask não encontrado! Por favor, instale o MetaMask.');
+                alert('MetaMask nÃo encontrado! Por favor, instale o MetaMask.');
             }
         });
     }
@@ -96,6 +96,8 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
+
 
 
 
