--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xcafe - O Futuro da Tokenização | Democratizando a Web3</title>
     <meta name="description"
-        content="Xcafe - O ecossistema mais completo para criação, gestão e negociação de tokens e contratos inteligentes. Democratize seus ativos digitais com nossa plataforma Web3 no-code.">
+        content="Xcafe - O ecossistema mais completo para Criação, gestão e negociação de tokens e contratos inteligentes. Democratize seus ativos digitais com nossa plataforma Web3 no-code.">
     <link rel="icon" type="image/png" sizes="32x32" href="imgs/xcafe-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/xcafe-16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -18,13 +18,13 @@
 
     <!-- Meta tags adicionais SEO -->
     <meta name="keywords"
-        content="xcafe, criar token, blockchain, ethereum, polygon, NFT, Web3, tokenização, contratos inteligentes, DeFi, DAO, marketplace">
+        content="xcafe, criar token, blockchain, ethereum, polygon, NFT, Web3, Tokenização, contratos inteligentes, DeFi, DAO, marketplace">
     <meta name="author" content="Xcafe Team">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Xcafe - O Futuro da Tokenização">
     <meta property="og:description"
-        content="O ecossistema mais completo para democratizar a criação de ativos digitais">
+        content="O ecossistema mais completo para democratizar a Criação de ativos digitais">
     <meta property="og:image" content="imgs/xcafe-512x512.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://xcafe.io">
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Xcafe - O Futuro da Tokenização">
     <meta name="twitter:description"
-        content="O ecossistema mais completo para democratizar a criação de ativos digitais">
+        content="O ecossistema mais completo para democratizar a Criação de ativos digitais">
     <meta name="twitter:image" content="imgs/xcafe-512x512.png">
 </head>
 
@@ -67,7 +67,7 @@
                         <div class="hero-content">
                             <h1 class="display-2 fw-bold mb-4 text-white">
                                 Conheça <span class="gradient-text">Xcafe </span>o EcoSistema que vai revolucionar a
-                                tokenização
+                                Tokenização
                             </h1>
 
                             <p class="lead text-secondary mb-5 fs-4">
@@ -106,8 +106,8 @@
                                 para todos.</h2>
 
                             <p class="lead text-secondary mb-4 fs-4">
-                                O EcoSistema <strong>Xcafe</strong> é totalmente intuitiva e permite a criação,
-                                apresentação, negociação, pesquisa e gestão de contratos inteligentes
+                                O EcoSistema <strong>Xcafe</strong> é totalmente intuitiva e permite a Criação,
+                                apresentAção, negociAção, pesquisa e gestÃo de contratos inteligentes
                                 e tokens sem qualquer conhecimento técnico.<br>
                                 Trazendo pessoas comuns para dentro de um
                                 sistema financeiro descentralizado e altamente rentável.
@@ -243,7 +243,7 @@
                             <div class="text-center">
                                 <h4 class="text-primary mb-3">💡 A Oportunidade é AGORA</h4>
                                 <p class="mb-0">
-                                    <strong>A ponte definitiva para uma nova era de inclusão financeira.</strong><br>
+                                    <strong>A ponte definitiva para uma nova era de inclusÃo financeira.</strong><br>
                                     Estamos abrindo portas para qualquer pessoa criar, divulgar e transformar suas
                                     ideias em ativos digitais reais, com escalabilidade global.
                                 </p>
@@ -337,7 +337,7 @@
                         Nossos <span class="gradient-text">Diferenciais</span>
                     </h2>
                     <p class="lead text-secondary">
-                        O que nos torna únicos no mercado de contratos e tokenização
+                        O que nos torna únicos no mercado de contratos e Tokenização
                     </p>
                 </div>
             </div>
@@ -363,7 +363,7 @@
                             <i class="bi bi-globe text-primary fs-1 mb-3"></i>
                             <h5 class="mb-3">EcoSistema Completo</h5>
                             <p class="text-secondary">
-                                Não somos apenas uma ferramenta de criação.
+                                NÃo somos apenas uma ferramenta de Criação.
                                 Oferecemos marketplace, rede social, IA e acompanhamento completo.
                             </p>
                         </div>
@@ -376,7 +376,7 @@
                             <i class="bi bi-robot text-primary fs-1 mb-3"></i>
                             <h5 class="mb-3">IA Orientativa</h5>
                             <p class="text-secondary">
-                                Nossa inteligência artificial te acompanha em cada etapa, desde a criação até o
+                                Nossa inteligência artificial te acompanha em cada etapa, desde a Criação até o
                                 sucesso do seu projeto.
                             </p>
                         </div>
@@ -395,7 +395,7 @@
                         <span class="gradient-text">Principais</span>
                     </h2>
                     <p class="lead text-secondary">
-                        Um EcoSistema vivo e completo que evolui com base na necessidade do mercado e sugestão dos
+                        Um EcoSistema vivo e completo que evolui com base na necessidade do mercado e sugestÃo dos
                         usuários.
                     </p>
                 </div>
@@ -408,7 +408,7 @@
                             <i class="bi bi-wallet2 text-primary" style="font-size: 2.5rem;"></i>
                         </div>
                         <h5 class="mb-3">Acesso via Wallet</h5>
-                        <p class="text-secondary">Descentralizado, padrão cripto. Conecte-se com qualquer carteira
+                        <p class="text-secondary">Descentralizado, Padrão cripto. Conecte-se com qualquer carteira
                             Web3 compatível.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="badge bg-success">Finalizado e Testado</span>
@@ -451,7 +451,7 @@
                             <i class="bi bi-graph-up text-primary" style="font-size: 2.5rem;"></i>
                         </div>
                         <h5 class="mb-3">Landing Page Automática</h5>
-                        <p class="text-secondary">Geração automática com descrição, gráficos e botão de compra
+                        <p class="text-secondary">GerAção automática com descrição, gráficos e Botão de compra
                             profissionais.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="badge bg-danger">Em Desenvolvimento</span>
@@ -466,7 +466,7 @@
                         </div>
                         <h5 class="mb-3">Compartilhamento Rápido</h5>
                         <p class="text-secondary">Compartilhe via WhatsApp, e-mail ou copie o link para divulgação
-                            instantânea.</p>
+                            instantÃnea.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="badge bg-danger">Em Desenvolvimento</span>
                         </div>
@@ -521,7 +521,7 @@
                             <i class="bi bi-wallet text-primary" style="font-size: 2.5rem;"></i>
                         </div>
                         <h5 class="mb-3">Vanity Wallets</h5>
-                        <p class="text-secondary">Geração em massa de carteiras personalizadas (vanity wallets) para
+                        <p class="text-secondary">GerAção em massa de carteiras personalizadas (vanity wallets) para
                             projetos.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="badge bg-warning">Em Teste</span>
@@ -583,7 +583,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5">
-                    <h2 class="display-4 fw-bold mb-3">Formas de <span class="gradient-text">Monetização</span>
+                    <h2 class="display-4 fw-bold mb-3">Formas de <span class="gradient-text">MonetizAção</span>
                     </h2>
                     <p class="lead text-secondary">
                         Como vamos manter a estrutura, criar lucros e valorizar nosso ecosistema.
@@ -603,7 +603,7 @@
                                         </div>
                                         <div class="flex-grow-1">
                                             <h5 class="card-title mb-2">Pacotes Recorrentes</h5>
-                                            <p class="card-text text-secondary mb-3">Contratação por um determinado
+                                            <p class="card-text text-secondary mb-3">ContratAção por um determinado
                                                 período, trimestral, semestral, anual. </p>
                                         </div>
                                     </div>
@@ -633,7 +633,7 @@
                                             <i class="bi bi-currency-dollar text-primary" style="font-size: 2rem;"></i>
                                         </div>
                                         <div class="flex-grow-1">
-                                            <h5 class="card-title mb-2">Comissão sob Transação</h5>
+                                            <h5 class="card-title mb-2">ComissÃo sob TransAção</h5>
                                             <p class="card-text text-secondary mb-3">Percentuais sob negociações que
                                                 aconteceram e dependem da plataforma.</p>
                                         </div>
@@ -686,7 +686,7 @@
                                 <h5 class="card-title mb-2">Preencha os dados</h5>
                                 <p class="card-text text-secondary mb-3">Escolha as opções e personalize o
                                     seu
-                                    contrato para geração dos tokens do seu projeto.
+                                    contrato para gerAção dos tokens do seu projeto.
                             </div>
                         </div>
                     </div>
@@ -738,7 +738,7 @@
                         da Plataforma
                     </h2>
                     <p class="lead text-secondary">
-                        Baseado em análises conservadoras do mercado de tokenização vamos demostrar o crescimento
+                        Baseado em análises conservadoras do mercado de Tokenização vamos demostrar o crescimento
                         projetado para a plataforma.
                     </p>
                 </div>
@@ -814,7 +814,7 @@
                         <h4 class="text-primary mb-3">Meta Estratégica</h4>
                         <h2 class="display-5 fw-bold mb-3">$100M em Receita Anual</h2>
                         <p class="text-secondary mb-0">Objetivo para o 4º ano, baseado na escalabilidade do
-                            modelo e crescimento do mercado de tokenização</p>
+                            modelo e crescimento do mercado de Tokenização</p>
                     </div>
                 </div>
             </div>
@@ -875,7 +875,7 @@
                     <p class="text-secondary mb-4">
                         Estamos prontos para captar, crescer e entregar a plataforma que definirá o futuro
                         da
-                        tokenização.
+                        Tokenização.
                         A hora de investir é agora – antes que essa revolução se torne saturada por
                         concorrentes
                         pouco preparados.
@@ -922,7 +922,7 @@
                             <i class="bi bi-currency-dollar text-primary fs-1 mb-3"></i>
                             <h5 class="mb-3">Formas de Pagamentos</h5>
                             <p class="text-secondary">
-                                Alem de aceitar Cartões de Credito, Debito, Pix a nossa principal moeda vai ser as Cryptos Moedas, faremos a conversão para várias moedas.
+                                Alem de aceitar Cartões de Credito, Debito, Pix a nossa principal moeda vai ser as Cryptos Moedas, faremos a conversÃo para várias moedas.
                             </p>
                         </div>
                     </div>
@@ -949,16 +949,16 @@
                 <div class="col-lg-6">
                     <h2 class="display-5 fw-bold mb-4">Impacto <span class="gradient-text">Social</span></h2>
                     <p class="lead text-secondary mb-4">
-                        Programa Xcafe Social: quer trazer a democratização ao acesso ao Mundo Crypto para TODOS.
+                        Programa Xcafe Social: quer trazer a democratizAção ao acesso ao Mundo Crypto para TODOS.
                     </p>
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="bi bi-mortarboard text-primary me-3 fs-4"></i>
-                            <strong>Xcafe Academy:</strong> Trilhas gratuitas de educação Web3 em português
+                            <strong>Xcafe Academy:</strong> Trilhas gratuitas de educAção Web3 em português
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-people text-primary me-3 fs-4"></i>
-                            <strong>Inclusão Real:</strong> Foco em mulheres, periferias e PMEs brasileiras
+                            <strong>InclusÃo Real:</strong> Foco em mulheres, periferias e PMEs brasileiras
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-award text-primary me-3 fs-4"></i>
@@ -970,7 +970,7 @@
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-geo-alt text-primary me-3 fs-4"></i>
-                            <strong>Foco Regional:</strong> Programas específicos para cada região do Brasil
+                            <strong>Foco Regional:</strong> Programas específicos para cada regiÃo do Brasil
                         </li>
                     </ul>
                 </div>
@@ -1075,3 +1075,4 @@
 </body>
 
 </html>
+
