--- a/link-index.html
+++ b/link-index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="pt-BR" data-theme="dark">
 <head>
@@ -198,8 +198,10 @@
 <!-- Template Loader -->
 <script src="js/template-loader.js"></script>
 
-<!-- Módulo de Geração de Links -->
+<!-- Módulo de GerAção de Links -->
 <script type="module" src="js/link-index.js"></script>
 
 </body>
 </html>
+
+
