--- a/link-token.html
+++ b/link-token.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR" data-theme="dark">
 
 <head>
@@ -174,7 +174,7 @@
                                 <div class="card-body">
 
                                     <div id="wallet-buttons" class="d-grid gap-2 mb-3">
-                                        <!-- Botões serão inseridos aqui dinamicamente -->
+                                        <!-- Botões serÃo inseridos aqui dinamicamente -->
                                     </div>
 
                                     <div class="text-center mb-3">
@@ -191,7 +191,7 @@
                                 <div class="alert alert-danger border-danger">
                                     <i class="bi bi-exclamation-triangle me-2 fs-1 text-danger"></i>
                                     <h4 class="text-danger mt-3">Erro ao carregar token</h4>
-                                    <p class="mb-0 mt-2">Parâmetros de token inválidos ou não encontrados.</p>
+                                    <p class="mb-0 mt-2">ParÃmetros de token inválidos ou nÃo encontrados.</p>
                                 </div>
                                 <div class="text-center mt-4">
                                     <a href="link-index.html" class="btn btn-primary">
@@ -224,3 +224,4 @@
 </body>
 
 </html>
+
