--- a/wg-config.html
+++ b/wg-config.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -163,7 +163,7 @@
       </div>
     </div>
 
-    <!-- SEÇÃO 3: CÓDIGO GERADO (Full Width) -->
+    <!-- SEção 3: CÓDIGO GERADO (Full Width) -->
     <div class="row mb-4">
       <div class="col-12">
         <div class="card border-secondary">
@@ -182,7 +182,7 @@
       </div>
     </div>
 
-    <!-- SEÇÃO 4: INSTRUÇÕES (Full Width) -->
+    <!-- SEção 4: INSTRUÇÕES (Full Width) -->
     <div class="row mb-4">
       <div class="col-12">
         <div class="alert alert-info" role="alert">
@@ -234,7 +234,7 @@
               console.error('Erro ao conectar wallet:', error);
             }
           } else {
-            alert('MetaMask não encontrado! Por favor, instale o MetaMask.');
+            alert('MetaMask nÃo encontrado! Por favor, instale o MetaMask.');
           }
         });
       }
@@ -243,3 +243,4 @@
 </body>
 
 </html>
+
