--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>xcafe - Em Breve</title>
-  <meta name="description" content="xcafe - Sua principal ferramenta de tokenização chegando em breve">
+  <meta name="description" content="xcafe - Sua principal ferramenta de Tokenização chegando em breve">
   <link rel="icon" type="image/png" sizes="32x32" href="imgs/xcafe-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="imgs/xcafe-16x16.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -351,9 +351,9 @@
       
       <!-- Description -->
       <p class="description">
-        A principal ferramenta de tokenização está chegando.<br>
+        A principal ferramenta de Tokenização está chegando.<br>
         Uma plataforma completa para<br>
-        criação, gerenciamento, divulgação e venda de tokens.<br>
+        Criação, gerenciamento, divulgação e venda de tokens.<br>
         <strong>Aguarde estamos construindo algo incrível para você.</strong>
       </p>
 
@@ -386,7 +386,7 @@
             <i class="bi bi-graph-up"></i>
           </div>
           <div class="feature-title">Ferramentas</div>
-          <div class="feature-desc">Ferramentas para produtividade na criação e divulgação</div>
+          <div class="feature-desc">Ferramentas para produtividade na Criação e divulgação</div>
         </div>
         
         <div class="feature-item">
@@ -412,3 +412,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
