--- a/wg-exemplo.html
+++ b/wg-exemplo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -108,6 +108,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
