--- a/tk-index.html
+++ b/tk-index.html
@@ -495,6 +495,11 @@
       margin-bottom: 1rem;
     }
     
+    .word-break {
+      word-break: break-all;
+      overflow-wrap: break-word;
+    }
+    
     .text-gradient {
       background: linear-gradient(45deg, #219ebc, #ffc107);
       -webkit-background-clip: text;
