--- a/add-index.html
+++ b/add-index.html
@@ -268,6 +268,41 @@
                 </div>
               </div>
 
+              <!-- Configurações de Deploy -->
+              <div class="card bg-dark border-primary shadow mb-4">
+                <div class="card-header bg-primary text-white">
+                  <h5 class="mb-0">
+                    <i class="bi bi-gear me-2"></i>Configurações de Deploy
+                  </h5>
+                </div>
+                <div class="card-body">
+                  <div class="mb-4">
+                    <label for="deploy-network" class="form-label text-white fw-bold">
+                      <i class="bi bi-globe me-2"></i>Selecionar Rede Blockchain
+                    </label>
+                    <select id="deploy-network" class="form-select bg-dark text-white border-secondary" required>
+                      <option value="">Carregando redes...</option>
+                    </select>
+                    <div class="form-text text-muted mt-2">
+                      <i class="bi bi-info-circle me-1"></i>
+                      Escolha a rede onde seu token será criado. Diferentes redes têm custos e características distintas.
+                    </div>
+                  </div>
+                  
+                  <div class="alert alert-info">
+                    <div class="d-flex align-items-start">
+                      <i class="bi bi-calculator me-3 mt-1"></i>
+                      <div>
+                        <h6 class="mb-1">Estimativa de Custo</h6>
+                        <div id="deploy-cost-estimate" class="text-muted small">
+                          Selecione uma rede para ver a estimativa
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- Botões de Navegação e Deploy -->
               <div class="d-flex justify-content-between align-items-center">
                 <button id="deploy-prev-btn" type="button" class="btn btn-outline-secondary">
@@ -277,12 +312,12 @@
                 <div class="text-center flex-fill mx-4">
                   <button id="deploy-token-btn" class="btn btn-success btn-lg px-5 py-3 fw-bold" disabled>
                     <i class="bi bi-rocket-takeoff me-2"></i>
-                    CRIAR TOKEN (0.01 BNB)
+                    CRIAR TOKEN
                   </button>
                   <div class="mt-3">
                     <small class="text-muted">
                       <i class="bi bi-info-circle me-1"></i>
-                      Certifique-se de ter BNB suficiente para o gas (~0.003-0.005 BNB adicional)
+                      Selecione uma rede para ver os custos de deploy
                     </small>
                   </div>
                 </div>
@@ -475,11 +510,17 @@
   <!-- Template Loader -->
   <script src="js/template-loader.js"></script>
   
+  <!-- Token Deploy API -->
+  <script src="js/token-deploy-api.js"></script>
+  
   <!-- Main Token Creation Script PRIMEIRO -->
   <script type="module" src="js/add-index.js"></script>
   
   <!-- Progressive Flow Manager DEPOIS -->
   <script src="js/progressive-flow.js"></script>
+  
+  <!-- Progressive Flow Multi-Chain Extension -->
+  <script src="js/progressive-flow-multi-chain.js"></script>
   
   <!-- xcafe Scripts -->
   <!-- <script src="js/api-key-manager.js"></script>  <!-- Arquivo nÃo encontrado --> -->
