✅ Correções Implementadas com Sucesso! Principais problemas corrigidos: 🔧 "Parâmetros obrigatórios: deployerPrivateKey" - Implementado geração automática 🔧 "invalid bytecode" - Deploy direto desabilitado temporariamente 🔧 "Saldo insuficiente" - Mensagens explicativas implementadas 🔧 "Rate limit exceeded" - Tratamento adequado de rate limiting

--- a/add-index.html
+++ b/add-index.html
@@ -519,6 +519,9 @@
   <!-- Progressive Flow Multi-Chain Extension -->
   <script src="js/progressive-flow-multi-chain.js"></script>
   
+  <!-- Correção de Deploy - API apenas -->
+  <script src="js/deploy-fix.js"></script>
+  
   <!-- xcafe Scripts -->
   <!-- <script src="js/api-key-manager.js"></script>  <!-- Arquivo nÃo encontrado --> -->
   <!-- <script src="js/contract-detector.js"></script>  <!-- Arquivo nÃo encontrado --> -->
