✅ CORREÇÃO CONCLUÍDA! 🔧 PROBLEMAS RESOLVIDOS: ✅ progressive-flow.js removido (arquivo corrompido com 4.702 caracteres de bytecode inválido) ✅ add-index.js restaurado (versão original funcionando sem erros) ✅ Referências atualizadas (comentadas no add-index.html) ✅ Sistema funcionando com arquitetura mais limpa

--- a/add-index.html
+++ b/add-index.html
@@ -519,7 +519,7 @@
   <script type="module" src="js/add-index.js"></script>
   
   <!-- Progressive Flow Manager -->
-  <script src="js/progressive-flow.js"></script>
+  <!-- <script src="js/progressive-flow.js"></script> REMOVIDO: arquivo com defeito -->
   
   <!-- Progressive Flow Multi-Chain Extension -->
   <script src="js/progressive-flow-multi-chain.js"></script>
