--- a/add-index.html
+++ b/add-index.html
@@ -48,16 +48,6 @@
               </div>
             </div>
               
-            <!-- Progress Bar -->
-            <div class="progress-container mb-4">
-              <div class="progress" style="height: 8px;">
-                <div class="progress-bar bg-gradient progress-bar-striped progress-bar-animated" 
-                     role="progressbar" id="main-progress" style="width: 5%"></div>
-              </div>
-              <div class="progress-text text-center mt-2">
-                <small class="text-muted" id="progress-text">Conecte sua carteira para começar</small>
-              </div>
-            </div>
             <!-- Seção 1: Conexão da Carteira -->
             <section id="section-wallet" class="creation-section active">
               <div class="section-header">
@@ -522,7 +512,7 @@
   <!-- <script src="js/progressive-flow.js"></script> REMOVIDO: arquivo com defeito -->
   
   <!-- Progressive Flow Multi-Chain Extension -->
-  <script src="js/progressive-flow-multi-chain.js"></script>
+  <!-- <script src="js/progressive-flow-multi-chain.js"></script> DESABILITADO: ProgressiveFlow removido -->
   
   <!-- Correção de Deploy - API apenas -->
   <script src="js/deploy-fix.js"></script>
