--- a/add-index.html
+++ b/add-index.html
@@ -383,6 +383,78 @@
                 </div>
               </div>
 
+              <!-- Configurações de Deploy -->
+              <div class="card bg-dark border-warning shadow mb-4">
+                <div class="card-header bg-warning text-dark">
+                  <h5 class="mb-0">
+                    <i class="bi bi-gear me-2"></i>Modo de Deploy
+                  </h5>
+                </div>
+                <div class="card-body">
+                  <p class="text-muted mb-3">
+                    Escolha como deseja criar seu token:
+                  </p>
+                  
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <div class="card bg-secondary border-success">
+                        <div class="card-body p-3">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="deployMode" id="realDeploy" value="real" checked>
+                            <label class="form-check-label text-success fw-bold" for="realDeploy">
+                              <i class="bi bi-globe me-2"></i>Deploy Real
+                            </label>
+                          </div>
+                          <small class="text-muted d-block mt-2">
+                            • Deploy na blockchain real<br>
+                            • Custos de gas aplicáveis<br>
+                            • Token 100% funcional<br>
+                            • <span class="text-warning">⚠️ API pode estar indisponível</span>
+                          </small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="card bg-secondary border-info">
+                        <div class="card-body p-3">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="deployMode" id="simulatedDeploy" value="simulated">
+                            <label class="form-check-label text-info fw-bold" for="simulatedDeploy">
+                              <i class="bi bi-cpu me-2"></i>Simulação
+                            </label>
+                          </div>
+                          <small class="text-muted d-block mt-2">
+                            • Deploy simulado (teste)<br>
+                            • Sem custos reais<br>
+                            • Para testes e demonstração<br>
+                            • <span class="text-success">✅ Sempre disponível</span>
+                          </small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="alert alert-info mt-3 mb-0">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                      <div>
+                        <i class="bi bi-info-circle me-2"></i>
+                        <small>
+                          <strong>Status da API:</strong>
+                        </small>
+                      </div>
+                      <div id="api-status" class="small">
+                        <i class="bi bi-hourglass-split text-muted me-2"></i>
+                        <span class="text-muted">Verificando...</span>
+                      </div>
+                    </div>
+                    <small>
+                      <strong>Recomendação:</strong> Se a API estiver indisponível (erro 500), 
+                      o sistema automaticamente usará simulação como fallback.
+                    </small>
+                  </div>
+                </div>
+              </div>
+
               <!-- Botão de Deploy Centralizado -->
               <div class="text-center mb-4">
                 <button id="deploy-token-btn" class="btn btn-success btn-lg px-5 py-3 fw-bold" disabled>
