feat: Add extended API for Solidity contract compilation and deployment
- Implemented new endpoints for compiling and deploying Solidity contracts.
- Added functionality for contract verification and analysis.
- Enhanced API documentation with detailed deployment instructions.
- Introduced a new client library for interacting with the extended API.
- Created a test HTML page to validate API capabilities and endpoints.
- Updated package.json with new dependencies and scripts for the extended API.

--- a/add-index.html
+++ b/add-index.html
@@ -702,6 +702,9 @@
   <!-- Token Deploy API -->
   <script src="js/token-deploy-api.js"></script>
   
+  <!-- Extended API with Compilation Support -->
+  <script src="js/xcafe-extended-api.js"></script>
+  
   <!-- Main Token Creation Script -->
   <script src="js/add-index.js"></script>
   
