atualização api hybrid

--- a/add-index.html
+++ b/add-index.html
@@ -699,28 +699,10 @@
   <!-- Template Loader -->
   <script src="js/template-loader.js"></script>
   
-  <!-- Token Deploy API -->
-  <script src="js/token-deploy-api.js"></script>
-  
-  <!-- Extended API with Compilation Support -->
-  <script src="js/xcafe-extended-api.js"></script>
+  <!-- Nova API Híbrida (usuário paga deploy via MetaMask) -->
+  <script src="js/xcafe-hybrid-api.js"></script>
   
   <!-- Main Token Creation Script -->
   <script src="js/add-index.js"></script>
-  
-  <!-- Progressive Flow Manager -->
-  <!-- <script src="js/progressive-flow.js"></script> REMOVIDO: arquivo com defeito -->
-  
-  <!-- Progressive Flow Multi-Chain Extension -->
-  <!-- <script src="js/progressive-flow-multi-chain.js"></script> DESABILITADO: ProgressiveFlow removido -->
-  
-  <!-- Correção de Deploy - API apenas -->
-  <script src="js/deploy-fix.js"></script>
-  
-  <!-- xcafe Scripts -->
-  <!-- <script src="js/api-key-manager.js"></script>  <!-- Arquivo nÃo encontrado --> -->
-  <!-- <script src="js/contract-detector.js"></script>  <!-- Arquivo nÃo encontrado --> -->
-  <!-- <script src="js/etherscan-v2-verification.js"></script>  <!-- Arquivo nÃo encontrado --> -->
-  <!-- <script src="js/verification-simple.js"></script>  <!-- Arquivo nÃo encontrado --> -->
 </body>
 </html>
