✅ Sistema de conexão idêntico ao compra-token.html ✅ Reset que mantém conexão (problema principal resolvido) ✅ Network info sempre visível quando conectado ✅ Layout visual preservado e funcionando ✅ Código limpo e reutilizável para outras páginas

--- a/add-index.html
+++ b/add-index.html
@@ -63,55 +63,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Progress Steps Bar -->
-            <div class="progress-steps mb-4">
-              <div class="container-fluid px-0">
-                <div class="row g-0 align-items-center">
-                  <div class="col">
-                    <div class="step-item active" data-step="1">
-                      <div class="step-number">
-                        <i class="bi bi-wallet2"></i>
-                      </div>
-                      <div class="step-label d-none d-md-block">Carteira</div>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <div class="step-connector"></div>
-                  </div>
-                  <div class="col">
-                    <div class="step-item" data-step="2">
-                      <div class="step-number">
-                        <i class="bi bi-info-circle"></i>
-                      </div>
-                      <div class="step-label d-none d-md-block">Informações</div>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <div class="step-connector"></div>
-                  </div>
-                  <div class="col">
-                    <div class="step-item" data-step="3">
-                      <div class="step-number">
-                        <i class="bi bi-rocket-takeoff"></i>
-                      </div>
-                      <div class="step-label d-none d-md-block">Deploy</div>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <div class="step-connector"></div>
-                  </div>
-                  <div class="col">
-                    <div class="step-item" data-step="4">
-                      <div class="step-number">
-                        <i class="bi bi-check-circle"></i>
-                      </div>
-                      <div class="step-label d-none d-md-block">Resultado</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
               
             <!-- Seção 1: Conexão da Carteira -->
             <section id="section-wallet" class="creation-section active section-enabled">
@@ -557,6 +508,7 @@
   <script src="js/shared/blockchain-utils.js"></script>
   <script src="js/shared/state-manager.js"></script>
   <script src="js/shared/ui-manager.js"></script>
+  <script src="js/shared/wallet-universal.js"></script>
   
   <!-- Template Loader -->
   <script src="js/template-loader.js"></script>
