--- a/add-index.html
+++ b/add-index.html
@@ -62,7 +62,7 @@
               
             <!-- Seção 1: Conexão da Carteira -->
             <section id="section-wallet" class="creation-section active section-enabled">
-              <div data-component="wallet-connection"></div>
+              <div data-component="wallet"></div>
             </section>
 
             <!-- Seção 2: Informações Básicas do Token -->
@@ -431,8 +431,8 @@
   <script src="js/shared/state-manager.js"></script>
   <script src="js/shared/ui-manager.js"></script>
   
-  <!-- Sistema de Carteira Universal -->
-  <script src="js/shared/wallet-universal.js"></script>
+  <!-- Sistema de Carteira Unificado -->
+  <script src="js/shared/wallet.js"></script>
   
   <!-- Template Loader (carrega componentes incluindo wallet-connection) -->
   <script src="js/template-loader.js"></script>
